assets/mvp.scss
---
---

$color-accent: #27A7F9;

/* -- Reset -- */

html { box-sizing: border-box; }
*, *:before, *:after { box-sizing: inherit; }

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}


html {
  scroll-behavior: smooth;
}

/*-- Type --*/

    body {
      font-family: 'Lato', sans-serif;
      font-size: 16px;
      line-height: 1.5;
      color: #333;
      background: #F5F7F8;
    }




/* SHOOTING STAR */

    /* -- LAYOUT -- */

            /* A section is a horiztonal band/stripe/row on the page.
               Defaults to the <body> bg color but can have its own color. */
            // .section        { padding: 20px; }

            /* If the page is at least 768px, center the content at that width.
               Otherwise it will be 100% wide. */
            // @media (min-width: 768px) {
            //   .content { width: 768px; margin: 0 auto; }
            // }

            /* If you want full width content no matter what,
               add class '.content-full' to any 'div.content' */
            // .content-full   { margin: 0; width: 100%; }

            /* new stuff from not 5 years ago */

            .feed-wrapper {
              position: relative;
            }

            @media (min-width: 1100px) {
              .feed-controls { width: 300px; float: right; }
              .feed-controls.fixed { position: fixed; top: 0; right: calc((100% - 1100px)/2); }
              .feed-main { width: 700px; float: left; }
            }

            @media (max-width: 1099px) {
              .feed-controls { display: none; }
              .feed-main { width: auto; float: none; }
            }

            .ss-container {
              width: 1100px;
              margin: 0 auto;
              position: relative;
            }
            @media (max-width: 1099px) {
              .ss-container {
                width: auto;
              }
            }

    /* -- */

      @media (min-width: 1100px) {
        article               { position: relative; }
        article .primary      { left: 150px;     top: 0; width: 585px; }
        article .secondary    { /* left: 0px; */ top: 0; width: 150px; height: 100px; }
      }

  /* Tiles */

  .tile {
    background: white;
    border-radius: 4px;
    padding: 16px;
    margin: 0 0 8px 0;
    border: 1px solid #d4dbe0;
    position: relative;
  }
  @media (max-width: 1099px) {
    .tile { margin-bottom: 8px; }
  }
  .tile--icon {
    font-size: 30px;
    float: left;
    padding-top: 2px;
    padding-left: 5px;
  }
  .tile .tile--body {
    padding-left: 54px;
  }




  .tile .tile--title {
    margin: 0;
    font-weight: 900;
    font-size: 18px;
    padding-right: 88px;
  }
  .tile .tile--date {
    margin: 0;
  }
  .tile .tile--description {
    margin: 12px 0 0 0;
    color: #777;
  }
  .tile--details {
    position: absolute;
    margin: 0;
    right: 20px;
    top: 20px;
    a {
      background-color: #F5f5f5;
      border-radius: 2px;
      color: #8c8c8c;
      display: inline-block;
      padding: 5px 24px 5px 10px;
      text-decoration: none;
      font-size: 14px;
      background-image: url(/assets/images/icon-expand.svg);
      background-repeat: no-repeat;
      background-position: 92% 8px;
      background-size: 16px 16px;
    }
    a:hover {
      background-color: #f0f0f0;
    }
  }
  .tile--details--expanded a {
    background-image: url(/assets/images/icon-close.svg);
    background-size: 12px 12px;
    background-position: 88% 10px;
  }
  .tile--expandedContent {
    display: none;
    margin-bottom: 12px;
    margin-top: 12px;
    border-top: 1px solid #eee;
  }
  .tile--hashtags-wrapper {
    margin-top: 16px;
  }
  .tile--hashtag-pill {
    margin-top: 4px;
    margin-bottom: 4px;
    background: #e8f5f5;
    border-radius: 3px;
    padding: 10px 15px;
    font-size: 14px;
    p {
      margin: 0;
      overflow: hidden;
      width: auto;
      color: #777;
    }
    .tile--hashtag-itself {
      float: left;
      font-weight: 900;
      color: #555;
      cursor: pointer;
    }
    .tile--hashtag-outbound {
      float: right;
      a {
        color: inherit;
      }
    }
  }
  .tile--hashtag-copy {
    font-weight: 400;
    font-size: 13px;
    color: #777;
  }



/* Planner UI - Date Area */

.date-ribbon {
  height: 69px;
  background: url(/assets/images/date-ribbon.svg) no-repeat left top;
  text-align: right;
  margin-top: 32px;
  margin-right: 8px;
  border-radius: 4px;
  padding-right: 12px;
}

.date-ribbon h3 {
  font-weight: 700;
  font-size: 19px;
  color: #AA6D00;
}
.date-ribbon h4 {
  color: #AA6D00;
  font-size: 14px;
  text-transform: uppercase;
  font-weight: 400;
}
.date-ribbon > h3,
.date-ribbon > h4 {
  padding: 10px 0 0 0;
  margin: 0;
}
.date-ribbon > h3 + h4 {
  margin: 0;
  padding: 0;
}

.date-ribbon > h4 + h3 {
  padding: 0;
}

    @media (max-width: 1099px) {
      .date_range {
        margin-bottom: 16px;
      }
    }

/* Planner UI - Main Feed */

.tile-wrapper {
  padding-top: 32px;
}

    @media (max-width: 1099px) {
      .tile-wrapper {
        padding-top: 0;
      }
    }

/* Planner UI - Calendar column */

.feed-controls .tile-calendar {
  margin-top: 32px;
}

.tile-scheduled-posts--heading {
  margin-top: 32px;
  margin-bottom: 12px;
}

